@@ -40,6 +40,12 @@ sub startup {
     push @{$self->plugins->namespaces}, 'App::skryf::Plugin';
     $self->plugin('Blog' => {authentication => $self->session('user')});
     $self->plugin('Wiki' => {authentication => $self->session('user')});
+    $self->plugin(
+        'Search' => {
+            tapir_token  => $cfg->{social}{tapir},
+            tapir_secret => $cfg->{social}{tapir_secret}
+        }
+    );
 
 ###############################################################################
 # Define template, media, static paths
