@@ -37,6 +37,12 @@
 
             # pause
             pause => '',
+
+            # tapir
+            tapir => '',
+
+            # tapir push api
+            tapir_secret => '',
         },
 
         template_directory => undef,
