@@ -1,6 +1,4 @@
 % layout 'auth';
-
-
 %= t 'div', class => 'post-body' => begin
   %= include 'admin/nav'
   %= t 'h2' => 'New content'
